# UniversityWorks

./: Pessoa.java  README-en.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
BankAccountPOOJava/: Conta.java  UsoDeConta.java
ComputerGraphics/BracoMec-FrancielioCastro/BracoMec/: main.cpp
ComputerGraphics/BracoMec-FrancielioCastro/BracoMec.xcodeproj/: project.pbxproj
ComputerGraphics/DesenhoAula06-FrancielioCastro/DesenhoAula06/: main.cpp
ComputerGraphics/DesenhoAula06-FrancielioCastro/DesenhoAula06.xcodeproj/: project.pbxproj
DataStructureFinal/: quest2.py
DataStructureGO/: README.md  q1_TdS_lista_encadeada.go  q3_tabela_hash.go
Database/: Estudo de Caso - BioAtiva - Francielio Castro.docx  README.md  bioativa_francielio_castro.mwb  bioativa_francielio_castro.sql
EDGo/: q2_TdS_vetor.go
Graphs/: .gitignore  CMakeLists.txt  README.md  RELATORIO_BASE.md  resultados.csv
Graphs/docs/: RELATORIO_BASE.md
Graphs/include/: Coloring.h  Graph.h
Graphs/scripts/: gerar_relatorio_pdf.py  plot_results.py
Graphs/src/: Coloring.cpp  Graph.cpp  main.cpp
Trabalho-final-ed/: quest3.py  quest4.py
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/questionnaire/: page.tsx
app/register/: page.tsx
components/: social-login-buttons.tsx
components/dashboard/: sidebar.tsx
furia-project/: package.json
furia-project/app/dashboard/: layout.tsx
furia-project/app/login/: page.tsx
furia-project/components/dashboard/: header.tsx  recent-activity.tsx
furia-project/src/app/: layout.tsx
src/components/: date-picker.tsx
(+11 files in other folders)
